--- a/crates/mevi3/Cargo.toml
+++ b/crates/mevi3/Cargo.toml
@@ -12,4 +12,6 @@ nix = "0.26.2"
 owo-colors = "3.5.0"
 passfd = "0.1.6"
 rangemap = "1.3.0"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 userfaultfd = "0.5.0"
