--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -14,6 +14,7 @@ libc = "0.2.139"
 nix = "0.26.2"
 owo-colors = "3.5.0"
 passfd = "0.1.6"
+postage = "0.5.0"
 rangemap = { version = "1.3.0", features = ["serde1"] }
 serde = { version = "1.0.154", features = ["derive"] }
 tokio = { version = "1.26.0", features = ["full"] }
