--- a/crates/mevi-frontend/Cargo.toml
+++ b/crates/mevi-frontend/Cargo.toml
@@ -10,6 +10,7 @@ bincode = "1.3.3"
 futures-util = "0.3.26"
 gloo-console = "0.2.3"
 gloo-net = "0.2.6"
+humansize = "2.1.3"
 rangemap = "1.3.0"
 serde = { version = "1.0.154", features = ["derive"] }
 wasm-bindgen-futures = "0.4.34"
