--- a/crates/mevi-frontend/Cargo.toml
+++ b/crates/mevi-frontend/Cargo.toml
@@ -11,6 +11,7 @@ futures-util = "0.3.26"
 gloo-console = "0.2.3"
 gloo-net = "0.2.6"
 humansize = "2.1.3"
+instant = { version = "0.1.12", features = ["wasm-bindgen", "inaccurate"] }
 itertools = "0.10.5"
 rangemap = "1.3.0"
 serde = { version = "1.0.154", features = ["derive"] }
