coalesce/accumulate pageins

--- a/crates/mevi-frontend/Cargo.toml
+++ b/crates/mevi-frontend/Cargo.toml
@@ -13,7 +13,7 @@ gloo-net = "0.2.6"
 humansize = "2.1.3"
 instant = { version = "0.1.12", features = ["wasm-bindgen", "inaccurate"] }
 itertools = "0.10.5"
-rangemap = "1.3.0"
+rangemap = { version = "1.3.0", features = ["serde1"] }
 serde = { version = "1.0.154", features = ["derive"] }
 wasm-bindgen-futures = "0.4.34"
 yew = { version = "0.20.0", features = ["csr"] }
