--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.6.10", features = ["ws"] }
 bincode = "1.3.3"
+color-eyre = "0.6.2"
 humansize = "2.1.3"
 libc = "0.2.139"
 nix = "0.26.2"
