--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -20,4 +20,4 @@ serde = { version = "1.0.154", features = ["derive"] }
 tokio = { version = "1.26.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-userfaultfd = "0.5.0"
+userfaultfd.workspace = true
