--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -15,6 +15,7 @@ nix = "0.26.2"
 owo-colors = "3.5.0"
 passfd = "0.1.6"
 postage = "0.5.0"
+proc-maps = "0.3.0"
 rangemap = { version = "1.3.0", features = ["serde1"] }
 serde = { version = "1.0.154", features = ["derive"] }
 tokio = { version = "1.26.0", features = ["full"] }
