--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -10,6 +10,7 @@ axum = { version = "0.6.10", features = ["ws"] }
 bincode = "1.3.3"
 color-eyre = "0.6.2"
 humansize = "2.1.3"
+lazy_static = "1.4.0"
 libc = "0.2.139"
 nix = "0.26.2"
 owo-colors = "3.5.0"
