--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -12,6 +12,7 @@ color-eyre = "0.6.2"
 humansize = "2.1.3"
 lazy_static = "1.4.0"
 libc = "0.2.139"
+mevi-common = { version = "0.1.0", path = "../mevi-common" }
 nix = "0.26.2"
 owo-colors = "3.5.0"
 passfd = "0.1.6"
