--- a/crates/mevi-common/Cargo.toml
+++ b/crates/mevi-common/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 nix = { version = "0.26.2", optional = true }
 rangemap = { version = "1.3.0", features = ["serde1"] }
 serde = { version = "1.0.156", features = ["derive"] }
+tracing = "0.1.37"
 
 [features]
 default = ["nix"]
