--- a/crates/mevi-common/Cargo.toml
+++ b/crates/mevi-common/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+humansize = "2.1.3"
 nix = { version = "0.26.2", optional = true }
 rangemap = { version = "1.3.0", features = ["serde1"] }
 serde = { version = "1.0.156", features = ["derive"] }
