--- a/crates/mevi-frontend/Cargo.toml
+++ b/crates/mevi-frontend/Cargo.toml
@@ -10,6 +10,7 @@ bincode = "1.3.3"
 futures-util = "0.3.26"
 gloo-console = "0.2.3"
 gloo-net = "0.2.6"
+gloo-timers = { version = "0.2.6", features = ["futures"] }
 humansize = "2.1.3"
 instant = { version = "0.1.12", features = ["wasm-bindgen", "inaccurate"] }
 itertools = "0.10.5"
