--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
 
 [workspace.dependencies]
 userfaultfd = { git = "https://github.com/fasterthanlime/userfaultfd-rs", branch = "expose-raw", features = ["linux4_14", "linux5_7"] }
+postcard = { version = "1.0.0", features = ["alloc"] }
 
 [profile.release]
 debug = 1
