--- a/crates/mevi-common/Cargo.toml
+++ b/crates/mevi-common/Cargo.toml
@@ -11,6 +11,7 @@ nix = { version = "0.26.2", optional = true }
 rangemap = { version = "1.3.0", features = ["serde1"] }
 serde = { version = "1.0.156", features = ["derive"] }
 tracing = "0.1.37"
+postcard.workspace = true
 
 [features]
 default = ["nix"]
