--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [workspace]
-members = [
-	"crates/*"
-]
+members = ["crates/*"]
 
 [workspace.dependencies]
-userfaultfd = { git = "https://github.com/fasterthanlime/userfaultfd-rs", branch = "expose-raw", features = ["linux4_14", "linux5_7"] }
+# expose-raw branch
+userfaultfd = { git = "https://github.com/fasterthanlime/userfaultfd-rs", rev = "e9160a896f7d8d80c8b0943480885598bd698d0", features = [
+	"linux4_14",
+	"linux5_7",
+] }
 postcard = { version = "1.0.0", features = ["alloc"] }
 
 [profile.release]
-debug = 2
+debug = 1
