--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -13,9 +13,9 @@ lazy_static = "1.4.0"
 libc = "0.2.139"
 mevi-common = { version = "0.1.0", path = "../mevi-common" }
 nix = "0.26.2"
-owo-colors = "3.5.0"
 passfd = "0.1.6"
 postage = "0.5.0"
+procfs = "0.15.1"
 rangemap = { version = "1.3.0", features = ["serde1"] }
 serde = { version = "1.0.154", features = ["derive"] }
 tokio = { version = "1.26.0", features = ["full"] }
