--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ resolver = "2"
 
 [workspace.dependencies]
 # expose-raw branch
-userfaultfd = { git = "https://github.com/fasterthanlime/userfaultfd-rs", rev = "e9160a896f7d8d80c8b0943480885598bd698d0", features = [
-	"linux4_14",
-] }
+userfaultfd = { git = "https://github.com/fasterthanlime/userfaultfd-rs", rev = "b7b814d", features = ["linux4_14"] }
 postcard = { version = "1.0.0", features = ["alloc"] }
+nix = { version = "0.27", features = ["feature", "ptrace", "signal", "mman"] }
 
 [profile.release]
 debug = 1
