--- a/crates/mevi-common/Cargo.toml
+++ b/crates/mevi-common/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 humansize = "2.1.3"
-nix = { version = "0.26.2", optional = true }
+nix = { workspace = true, optional = true }
 rangemap = { version = "1.3.0", features = ["serde1"] }
 serde = { version = "1.0.156", features = ["derive"] }
 tracing = "0.1.37"
