--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -12,7 +12,7 @@ humansize = "2.1.3"
 lazy_static = "1.4.0"
 libc = "0.2.139"
 mevi-common = { version = "0.1.0", path = "../mevi-common" }
-nix = "0.26.2"
+nix.workspace = true
 passfd = "0.1.6"
 postage = "0.5.0"
 procfs = "0.15.1"
