--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -10,12 +10,11 @@ axum = { version = "0.6.10", features = ["ws"] }
 color-eyre = "0.6.2"
 humansize = "2.1.3"
 lazy_static = "1.4.0"
-libc = "0.2.139"
 mevi-common = { version = "0.1.0", path = "../mevi-common" }
+mevi-driver = { version = "0.1.0", path = "../mevi-driver" }
+mevi-driver-ptrace-uffd = { version = "0.1.0", path = "../mevi-driver-ptrace-uffd" }
 nix.workspace = true
-passfd = "0.1.6"
 postage = "0.5.0"
-procfs = "0.15.1"
 rangemap = { version = "1.3.0", features = ["serde1"] }
 serde = { version = "1.0.154", features = ["derive"] }
 tokio = { version = "1.26.0", features = ["full"] }
