--- a/crates/mevi/Cargo.toml
+++ b/crates/mevi/Cargo.toml
@@ -13,6 +13,7 @@ lazy_static = "1.4.0"
 mevi-common = { version = "0.1.0", path = "../mevi-common" }
 mevi-driver = { version = "0.1.0", path = "../mevi-driver" }
 mevi-driver-ptrace-uffd = { version = "0.1.0", path = "../mevi-driver-ptrace-uffd" }
+mevi-driver-ebpf = { version = "0.1.0", path = "../mevi-driver-ebpf" }
 nix.workspace = true
 postage = "0.5.0"
 rangemap = { version = "1.3.0", features = ["serde1"] }
