Create userspace ebpf tracer code
This code is not complete and still presents some bugs, but it
implements most of the expected logic from userspace.

Most of the work will be done in the kernel programs which are yet to be
written, but this commit ensures that the programs can be loaded
successfully (the attack call is still commented).

There are still things to figure out:
  - How to stop the Mevi progam when the tracer is done.
  - Figure out the corresponce between ptrace-uffd events and ebpf
    programs.
  - Work on move some abstraction to the `mevi-driver` crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ resolver = "2"
 
 [workspace.dependencies]
 # expose-raw branch
-userfaultfd = { git = "https://github.com/fasterthanlime/userfaultfd-rs", rev = "b7b814d", features = ["linux4_14"] }
+userfaultfd = { git = "https://github.com/fasterthanlime/userfaultfd-rs", rev = "b7b814d", features = [
+    "linux4_14",
+] }
 postcard = { version = "1.0.0", features = ["alloc"] }
 nix = { version = "0.27", features = ["feature", "ptrace", "signal", "mman"] }
 
